# rooc-feather-backend-solver

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  input.csv
.github/: copilot-instructions.md
.github/workflows/: build.yml  tag.yml
data/: attack-set-bonuses.csv  attack-stats.csv  defense-set-bonuses.csv  defense-stats.csv  feather-stats.csv  presets.csv  pve-stats.csv  pvp-stats.csv
examples/: best_solution.txt  input.csv
examples./: best_solution.json
src/: lib.rs  main.rs
src/data/: loader.rs  mod.rs  schema.rs
src/domain/: feather.rs  inventory.rs  mod.rs  preset.rs  solution.rs  stats.rs  statue.rs
src/eval/: evaluator.rs  feather_table.rs  mod.rs  normalizer.rs  set_bonus_table.rs
src/solver/: bnb.rs  mod.rs  sa.rs
src/solver/common/: candidate.rs  mod.rs  repair.rs
src/tui/: app.rs
tests/: golden_eval.rs
