[package]
name    = "rooc-feather-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rooc-feather-solver"
path = "src/main.rs"

[lib]
name = "rooc_feather_solver"
path = "src/lib.rs"

[dependencies]
rayon             = "1.10"
crossbeam-channel = "0.5"
ctrlc             = "3"
csv               = "1.3"
serde             = { version = "1", features = ["derive"] }
anyhow            = "1"
thiserror         = "1"
clap              = { version = "4", features = ["derive"] }
rand              = "0.8"
rand_xoshiro      = "0.6"
serde_json        = "1"

[features]
default = []
bnb-lp  = ["good_lp"]

[dependencies.good_lp]
version  = "1.8"
features = ["coin_cbc"]
optional = true
